refactor: change book service test in api.